--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -11,7 +11,7 @@ on:
       - main
 
 env:
-  IMAGE: ${{ github.repository }} # eg. unitycatalog/unitycatalog
+  IMAGE: ghcr.io/${{ github.repository }} # Using GitHub Container Registry
 
 jobs:
   build-and-push:
@@ -33,23 +33,22 @@ jobs:
         with:
           images: ${{ env.IMAGE }}
 
-      # TODO: Agree on a strategy for publishing to DockerHub
-      # - name: Login to Docker Hub
-      #   uses: docker/login-action@v3
-      #   with:
-      #     username: ${{ vars.DOCKERHUB_USERNAME }}
-      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
           context: .
-          push: false # TODO: When we are ready to publish, change this to: ${{ github.event_name != 'pull_request' }}
+          push: ${{ github.event_name != 'pull_request' }}
           platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-          # TODO: Agree on a caching strategy
-          # NOTE: See here for an explanation of registry caching: https://tinyurl.com/4b8mfexr
-          # cache-from: type=registry,ref=${{ env.IMAGE }}:buildcache
-          # cache-to: type=registry,ref=${{ env.IMAGE }}:buildcache,mode=max
+          # Optional caching strategy
+          cache-from: type=registry,ref=${{ env.IMAGE }}:buildcache
+          cache-to: type=registry,ref=${{ env.IMAGE }}:buildcache,mode=max
