--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -9,7 +9,11 @@ on:
   pull_request:
     branches:
       - main
-
+      
+permissions:
+  packages: write
+  contents: read
+  
 env:
   IMAGE: ghcr.io/${{ github.repository }} # Using GitHub Container Registry
 
