--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -25,12 +25,12 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-      # This is used to complete the identity challenge
-      # with sigstore/fulcio when running outside of PRs.
-      id-token: write
+    permissions: read-all|write-all
+    #  contents: read
+    ##  packages: write
+    #  # This is used to complete the identity challenge
+    #  # with sigstore/fulcio when running outside of PRs.
+    #  id-token: write
 
     steps:
       - name: Checkout repository
