--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -23,14 +23,13 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    permissions: read-all|write-all
-    #  contents: read
-    ##  packages: write
-    #  # This is used to complete the identity challenge
-    #  # with sigstore/fulcio when running outside of PRs.
-    #  id-token: write
+    permissions:
+      contents: read
+      packages: write
+      # This is used to complete the identity challenge
+      # with sigstore/fulcio when running outside of PRs.
+      id-token: write
 
     steps:
       - name: Checkout repository
