--- a/ui/.env
+++ b/ui/.env
@@ -1,3 +1,6 @@
+HOST=uc.internal.anjokolk.com
+REACT_APP_API_HOST=uc.cloud.anjokolk.com
+
 # Google config
 REACT_APP_GOOGLE_AUTH_ENABLED=false
 REACT_APP_GOOGLE_CLIENT_ID=
