--- a/ui/.env
+++ b/ui/.env
@@ -1,5 +1,6 @@
-HOST=0.0.0.0
-REACT_APP_API_HOST=uc.cloud.anjokolk.com
+#HOST=0.0.0.0
+#REACT_APP_API_HOST=uc.cloud.anjokolk.com
+DANGEROUSLY_DISABLE_HOST_CHECK=true
 
 # Google config
 REACT_APP_GOOGLE_AUTH_ENABLED=false
